syntax = "proto3";

package interaction;

service InteractionService {
  rpc LikeVideo (LikeRequest) returns (LikeResponse);
  rpc UnlikeVideo (UnlikeRequest) returns (UnlikeResponse);
  rpc AddComment (CommentRequest) returns (CommentResponse);
  rpc GetComments (GetCommentsRequest) returns (CommentsListResponse);
  rpc RecordView (ViewRequest) returns (ViewResponse);
}

message LikeRequest {
  string userId = 1;
  string videoId = 2;
}

message LikeResponse {
  bool success = 1;
  int32 totalLikes = 2;
}

message UnlikeRequest {
  string userId = 1;
  string videoId = 2;
}

message UnlikeResponse {
  bool success = 1;
  int32 totalLikes = 2;
}

message CommentRequest {
  string userId = 1;
  string videoId = 2;
  string content = 3;
}

message CommentResponse {
  string id = 1;
  string userId = 2;
  string videoId = 3;
  string content = 4;
  string createdAt = 5;
}

message GetCommentsRequest {
  string videoId = 1;
  int32 page = 2;
  int32 limit = 3;
}

message CommentsListResponse {
  repeated CommentResponse comments = 1;
  int32 total = 2;
}

message ViewRequest {
  string videoId = 1;
  string userId = 2;
}

message ViewResponse {
  bool success = 1;
  int64 totalViews = 2;
}
